--- a/PROYECTO_1P/index.html
+++ b/PROYECTO_1P/index.html
@@ -160,7 +160,7 @@
 <body>
   <nav class="navbar navbar-expand-md navbar-custom fixed-top px-4 py-2 shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="40" height="40" class="me-2 rounded-circle shadow-sm img-logo" ondblclick="toggleAdminPanel()" />
+      <img src="public/img/faceapp.png" alt="Logo FACEAPP" width="40" height="40" class="me-2 rounded-circle shadow-sm img-logo"      ondblclick="window.location.href='administrador.html'"  />
       <span class="fw-bold fs-4">FACEAPP</span>
     </a>
     <div class="collapse navbar-collapse justify-content-end">
