--- a/PROYECTO_1P/crear_perfil.html
+++ b/PROYECTO_1P/crear_perfil.html
@@ -146,6 +146,7 @@
   </style>
 
 </head>
+
 <body class="light-theme">
    <nav class="navbar navbar-expand-md navbar-custom fixed-top px-4 py-2 shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
@@ -197,14 +198,25 @@
   
 <div class="modal fade" id="registroModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content p-4">
+      <div class="modal-content p-4 position-relative">
+  <a href="index.html" class="btn btn-outline-danger position-absolute top-0 start-0 m-3">X</a>
       <button id="themeToggleModal" class="btn btn-outline-secondary btn-sm btn-toggle-theme">
         <i class="bi bi-moon-stars-fill"></i>
       </button>
 
-      <div class="modal-header border-0">
-        <h5 class="modal-title w-100 text-center fw-bold fs-4">Paso <span id="pasoActual">1</span> de 5 - FACEAPP</h5>
-      </div>
+  <div class="modal-header border-0 d-flex flex-column align-items-center text-center">
+  <img src="public/img/faceapp.png" alt="Logo FACEAPP" class="rounded-circle shadow-sm mb-2" style="width: 60px; height: 60px;">
+
+  <h5 class="modal-title fw-bold fs-4" style="font-family: 'Poppins', sans-serif; color: #098860;">
+    Paso <span id="pasoActual">1</span> de 5 - FACEAPP
+  </h5>
+
+  <div class="progress w-100 mt-3" style="height: 10px; background-color: #e0e0e0;">
+  <div id="barraProgreso" class="progress-bar bg-success" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
+</div>
+
 
       <div class="modal-body">
         <form id="formRegistro" onsubmit="finalizarRegistro(event)">
@@ -217,52 +229,82 @@
             </select>
           </div>
 
-          <div class="step active" id="step1">
-            <label class="form-label">Nombre</label>
-            <input type="text" class="form-control mb-2" required>
-            <label class="form-label">Apellido</label>
-            <input type="text" class="form-control mb-2" required>
-          </div>
+      <div class="step active" id="step1">
+  <label class="form-label">Nombre</label>
+  <input type="text" id="nombre" class="form-control mb-2" required>
 
-          <div class="step" id="step2">
-            <label class="form-label">Fecha de Nacimiento</label>
-            <input type="date" class="form-control mb-2" required>
-            <label class="form-label">Correo</label>
-            <input type="email" class="form-control mb-2" required>
-          </div>
+  <label class="form-label">Apellido</label>
+  <input type="text" id="apellido" class="form-control mb-2" required>
+</div>
 
-          <div class="step" id="step3">
-            <label class="form-label">Foto de Perfil</label>
-            <div id="video-container">
-              <video id="my_video" autoplay playsinline class="w-100 rounded mb-2" style="max-height: 240px;"></video>
-              <canvas id="foto" width="300" height="200" class="d-none"></canvas>
-            </div>
-            <p id="errorCamara" class="d-none text-danger">No se pudo acceder a la cámara. Puedes subir una imagen manualmente.</p>
-            <input type="file" accept="image/*" class="form-control mb-3">
-          </div>
+<div class="step" id="step2">
+  <label class="form-label">Fecha de Nacimiento</label>
+  <input type="date" id="edad" class="form-control mb-2" required>
 
-          <div class="step" id="step4">
-            <label class="form-label">Latitud</label>
-            <input type="text" id="txt_latitud" class="form-control mb-2" readonly>
-            <label class="form-label">Longitud</label>
-            <input type="text" id="txt_longitud" class="form-control mb-2" readonly>
-          </div>
+  <label class="form-label">Correo</label>
+  <input type="email" id="correo" class="form-control mb-2" required>
+
+  <label class="form-label">Departamento</label>
+  <select id="departamento" class="form-select mb-2" required>
+    <option value="">Selecciona una opción</option>
+    <option value="DCCO">DCCO</option>
+    <option value="CIENCIAS EXACTAS">CIENCIAS EXACTAS</option>
+    <option value="CIENCIAS DE LA VIDA">CIENCIAS DE LA VIDA</option>
+    <option value="CIENCIAS DE LA CONSTRUCCION">CIENCIAS DE LA CONSTRUCCIÓN</option>
+    <option value="CIENCIAS HUMANAS">CIENCIAS HUMANAS</option>
+    <option value="DCA">DCA</option>
+  </select>
+</div>
+
+
+<div class="step" id="step3">
+  <label class="form-label">Foto de Perfil</label>
+  <div id="video-container">
+    <video id="my_video" autoplay playsinline class="w-100 rounded mb-2" style="max-height: 240px;"></video>
+    <button type="button" class="btn btn-primary mb-3" onclick="fnc_TomarFoto()">Tomar Foto</button>
+    <canvas id="foto" class="border rounded d-none" style="width: 100%; max-width: 300px;"></canvas>
+  </div>
+  <p id="errorCamara" class="d-none text-danger">No se pudo acceder a la cámara. Puedes subir una imagen manualmente.</p>
+  <input type="file" id="archivoFoto" accept="image/*" class="form-control mb-3">
+</div>
+
+
+<div class="step" id="step4">
+  <p class="form-text mb-3">Haz clic en el botón para registrar tu ubicación actual.</p>
+
+  <button type="button" class="btn btn-outline-success mb-3" onclick="registrarUbicacion()">Registrar Ubicación</button>
+
+  
+  <input type="hidden" id="txt_latitud">
+  <input type="hidden" id="txt_longitud">
+
+ <br>
+  <div id="ubicacionConfirmada" class="text-success d-none mb-3">
+    ✅ Ubicación registrada correctamente.
+  </div>
+
+
+  <label class="form-label">Nombre de Usuario</label>
+  <input type="text" id="usuario" class="form-control mb-2" required>
+
+  <label class="form-label">Contraseña</label>
+  <input type="password" id="contrasena" class="form-control mb-2" required>
+</div>
 
           <div class="step" id="step5">
             <p class="text-success fs-5 text-center">¡Registro casi completo! Haz clic en "Registrar" para finalizar.</p>
           </div>
 
           <div class="d-flex justify-content-between mt-4">
-            <button type="button" class="btn btn-outline-secondary" onclick="cambiarPaso(-1)">Anterior</button>
-            <button type="button" class="btn btn-success" onclick="cambiarPaso(1)">Siguiente</button>
+            <button type="button" class="btn-get-started" onclick="cambiarPaso(-1)">Anterior</button>
+            <button type="button" class="btn-get-started" id="btnSiguiente" onclick="cambiarPaso(1)">Siguiente</button>
+            <button type="submit" class="btn btn-primary d-none" id="btnRegistrar" onclick="guardar_datos()">Registrar</button>
           </div>
 
           <div class="text-end mt-3">
-            <a href="index.html" class="btn btn-outline-danger">Cancelar</a>
-          </div>
+             </div>
         </form>
 
-        <!-- Chatbot dentro del modal -->
         <div id="chatbotModal" class="mt-4 border rounded bg-light p-3">
           <div class="d-flex justify-content-between align-items-center">
             <strong class="text-success">Asistente FACEAPP</strong>
@@ -278,6 +320,9 @@
     </div>
   </div>
 </div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
 const modal = new bootstrap.Modal(document.getElementById('registroModal'));
@@ -301,13 +346,73 @@ document.getElementById("tipoAcceso").addEventListener("change", function() {
 });
 
 function cambiarPaso(direccion) {
+  if (direccion === 1 && !validarPaso(paso)) {
+    Swal.fire({
+      icon: 'warning',
+      title: 'Campos incompletos',
+      text: 'Por favor completa todos los campos antes de continuar.',
+      confirmButtonColor: '#198754'
+    });
+    return;
+  }
+
   document.getElementById(`step${paso}`).classList.remove('active');
+
   paso += direccion;
   if (paso < 1) paso = 1;
   if (paso > 5) paso = 5;
+
   document.getElementById(`step${paso}`).classList.add('active');
   document.getElementById('pasoActual').textContent = paso;
+
+  const progreso = Math.min((paso / 5) * 100, 100);
+  const barra = document.getElementById('barraProgreso');
+  barra.style.width = `${progreso}%`;
+  barra.setAttribute('aria-valuenow', progreso);
+
+  const btnSiguiente = document.getElementById('btnSiguiente');
+  const btnRegistrar = document.getElementById('btnRegistrar');
+
+  if (paso === 5) {
+    btnSiguiente.classList.add('d-none');
+    btnRegistrar.classList.remove('d-none');
+  } else {
+    btnSiguiente.classList.remove('d-none');
+    btnRegistrar.classList.add('d-none');
+  }
 }
+
+
+function validarPaso(pasoActual) {
+  switch (pasoActual) {
+    case 1:
+      const nombre = document.getElementById("nombre").value.trim();
+      const apellido = document.getElementById("apellido").value.trim();
+      return nombre !== "" && apellido !== "";
+
+    case 2:
+      const fecha = document.getElementById("edad").value;
+      const correo = document.getElementById("correo").value.trim();
+      const departamento = document.getElementById("departamento").value.trim();
+      return fecha !== "" && correo !== "" && departamento !== "";
+
+    case 3:
+      const video = document.getElementById("my_video");
+      const canvas = document.getElementById("foto");
+      const archivo = document.querySelector("input[type='file']").files[0];
+      const fotoTomada = canvas && canvas.width > 0 && canvas.height > 0;
+      return video || archivo || fotoTomada;
+
+    case 4:
+      const lat = document.getElementById("txt_latitud").value;
+      const lon = document.getElementById("txt_longitud").value;
+      return lat !== "" && lat !== "No disponible" && lon !== "" && lon !== "No disponible";
+
+    default:
+      return true;
+  }
+}
+
 
 function finalizarRegistro(e) {
   e.preventDefault();
@@ -331,21 +436,6 @@ function obtenerUbicacion() {
   }
 }
 
-function accederCamara() {
-  const video = document.getElementById("my_video");
-  const contenedor = document.getElementById("video-container");
-  const errorMsg = document.getElementById("errorCamara");
-
-  navigator.mediaDevices.getUserMedia({ video: true })
-    .then(stream => {
-      video.srcObject = stream;
-      contenedor.style.display = 'block';
-    })
-    .catch(() => {
-      errorMsg.classList.remove("d-none");
-      contenedor.style.display = 'none';
-    });
-}
 
 function responderChatModal() {
   const input = document.getElementById("chatInputModal").value.trim();
@@ -390,7 +480,18 @@ document.getElementById('themeToggleModal').addEventListener('click', () => {
   document.body.classList.toggle('dark-theme');
   document.body.classList.toggle('light-theme');
   document.querySelector('.modal-content').classList.toggle('dark-theme');
+  const chatbot = document.getElementById('chatbotModal');
+  if (chatbot) {
+    chatbot.classList.toggle('bg-light');
+    chatbot.classList.toggle('bg-dark');
+    chatbot.classList.toggle('text-white');
+    chatbot.classList.toggle('text-light');
+  }
 });
 </script>
+<script src = "public/bootstrap-5.3.5-dist/js/camara.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="public/bootstrap-5.3.5-dist/js/geo.js"></script>
+<script src="public/bootstrap-5.3.5-dist/js/guardar_datos.js"></script>
 </body>
 </html>
